- Vampire mages un-deferred.
- If preferred pet is set to '@', the player spawns with an adventuring party.
  This is very experimental, and probably should not be used.
- Some of the less powerful or less unique quest nemeses have been changed to
  be more challenging or interesting (see below)
- Bribing demon lords has been greatly expanded. They now can potentially ask
  for powerful items in your inventory instead of gold.

Quest Nemesis Changes
- Lord Surtur can create level-shaking earthquakes when he attacks.
- Nalzok now has a much higher chance of summoning other demons on hit.
- Ixoth's claw attack can stun the opponent.
- The Dark One now casts spells twice per turn.
- Thoth Amon now casts a mix of clerical and mage spells.

New Races
- Merfolk: Start with swimming, and eventually learn to breath water. This is
  made up for by low maxed stats.
- Werewolf: Similar to humans, but with permanent, incurable lycanthropy.
  Can be considered a "challenge race."

New Roles
- Cartomancer: A spellcaster with a focus on spell cards (scrolls). They start
  with a number of scrolls, and whenever they use one it has a chance of not
  being consumed. Unfortunately, their skill selection is awful, and they
  receive a harsh alignment penalty for using magic markers (you feel guilty
  for forging a card). The entire role affectionately parodies various trading
  card games and the shows that center on them.

New Artifacts
- Gungnir: Odin's spear. Very similar to Mjollnir, but not quite as powerful and
  does not require gauntlets of power to be thrown.
- Gleipnir: The bindings used to contain Fenrir. Base type of grappling hook,
  but with a huge range, increased damage, and the ability to snare enemies
  regardless of size.
- Gae Bulg: Javelin with level-drain abilities. Throwing it at an enemy inflicts
  an instant kill on hit, but Gae Bulg may be lost.
- Gae Dearg: Spear with a chance of cancelling those it strikes.
- Gae Buidhe: Spear with level-drain abilities.